# ActiveMultiCamSystem

./: .gitignore  CMakeLists.txt  README.md
examples/: app_handeye.cpp  app_handeye_M1.cpp  app_stich_wide.cpp  app_stitch_wide.cpp  calib_aprilgrid.cpp  checkerboard.cpp
modules/apriltags/include/apriltags/: gridDetector.hpp
modules/apriltags/src/: gridDetector.cpp
modules/calibrateCamera/include/calibrateCamera/: Zhang.hpp  Zhang_DLT.hpp  Zhang_nonlinear.hpp
modules/calibrateCamera/src/: Zhang.cpp  Zhang_DLT.cpp  Zhang_nonlinear.cpp
modules/common/include/common/: common.hpp  helper.hpp  io.hpp  lambda_body.hpp  load_data_be_csv.hpp  mat_converter.hpp
modules/common/src/: common.cpp
modules/handeye/include/handeye/: handeye.hpp  handeye_sfm.hpp
modules/handeye/src/: handeye.cpp  handeye_sfm.cpp
modules/kinematics/include/kinematics/: kinematics.hpp
modules/kinematics/src/: kinematicsX1X2.cpp
trash/: class_camera_calibrator.hpp  class_nonlinear_optimizer.hpp
